// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._1rqfhhdz,html._1rqfhhdz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_1dxjjv60 _1blv4tb18 _1blv4tb1b">
+        <div class="_1n3d6q80 _1rqfhhd7i _1rqfhhd6e _1rqfhhd9q _1rqfhhd8m _1rqfhhd5e _1blv4tb18 _1blv4tb1b _1rqfhhd32 _1rqfhhd35">
+          <span class="_1n3d6q80 _1rqfhhd4y _1blv4tb0 _1blv4tb1 _1blv4tb21 _1feexz14 _1blv4tbd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1n3d6q80 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] ._1n3d6q80 {
  outline: none;
}
._1n3d6q81 {
  display: block;
}
._1n3d6q82 {
  line-height: 1;
}
._1n3d6q83 {
  list-style: none;
}
._1n3d6q84 {
  quotes: none;
}
._1n3d6q84:after,
._1n3d6q84:before {
  content: "";
}
._1n3d6q85 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1n3d6q86 {
  -webkit-appearance: none;
  appearance: none;
}
._1n3d6q87 {
  background-color: transparent;
}
._1n3d6q89 {
  color: inherit;
}
._1n3d6q8a:disabled {
  opacity: 1;
}
._1n3d6q8a::-ms-expand {
  display: none;
}
._1n3d6q8c[type="number"] {
  -moz-appearance: textfield;
}
._1n3d6q8c[type="number"]::-webkit-inner-spin-button,
._1n3d6q8c[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1n3d6q8c::-ms-clear {
  display: none;
}
._1n3d6q8c::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1n3d6q8f {
  color: inherit;
  text-decoration: none;
}
._1rqfhhd0 {
  overflow: hidden;
}
._1rqfhhd1 {
  overflow: scroll;
}
._1rqfhhd2 {
  overflow: visible;
}
._1rqfhhd3 {
  overflow: auto;
}
._1rqfhhd4 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
._1rqfhhd5 {
  outline: none;
}
._1rqfhhd6 {
  opacity: 0;
}
._1rqfhhd7 {
  z-index: 0;
}
._1rqfhhd8 {
  z-index: 1;
}
._1rqfhhd9 {
  z-index: 2;
}
._1rqfhhda {
  z-index: 90;
}
._1rqfhhdb {
  z-index: 100;
}
._1rqfhhdc {
  z-index: 200;
}
._1rqfhhdd {
  z-index: 290;
}
._1rqfhhde {
  z-index: 300;
}
._1rqfhhdf {
  z-index: 400;
}
._1rqfhhdg {
  cursor: default;
}
._1rqfhhdh {
  cursor: pointer;
}
._1rqfhhdi {
  pointer-events: none;
}
._1rqfhhdj {
  top: 0;
}
._1rqfhhdk {
  bottom: 0;
}
._1rqfhhdl {
  left: 0;
}
._1rqfhhdm {
  right: 0;
}
._1rqfhhdn {
  height: 100%;
}
._1rqfhhdo {
  height: var(--xkp1ab9);
}
._1rqfhhdp {
  width: 100%;
}
._1rqfhhdq {
  width: var(--xkp1ab9);
}
._1rqfhhdr {
  min-width: 0;
}
._1rqfhhds {
  max-width: var(--xkp1ab11);
}
._1rqfhhdt {
  max-width: var(--xkp1ab12);
}
._1rqfhhdu {
  max-width: var(--xkp1ab13);
}
._1rqfhhdv {
  max-width: var(--xkp1ab14);
}
._1rqfhhdw {
  transition: var(--xkp1ab5i);
}
._1rqfhhdx {
  transition: var(--xkp1ab5j);
}
._1rqfhhdy:active {
  transform: var(--xkp1ab5k);
}
html._1rqfhhdz ._1rqfhhd11,
html:not(._1rqfhhdz) ._1rqfhhd10 {
  background: var(--xkp1ab1t);
}
html._1rqfhhdz ._1rqfhhd13,
html:not(._1rqfhhdz) ._1rqfhhd12 {
  background: var(--xkp1ab1u);
}
html._1rqfhhdz ._1rqfhhd15,
html:not(._1rqfhhdz) ._1rqfhhd14 {
  background: var(--xkp1ab1v);
}
html._1rqfhhdz ._1rqfhhd17,
html:not(._1rqfhhdz) ._1rqfhhd16 {
  background: var(--xkp1ab1w);
}
html._1rqfhhdz ._1rqfhhd19,
html:not(._1rqfhhdz) ._1rqfhhd18 {
  background: var(--xkp1ab1x);
}
html._1rqfhhdz ._1rqfhhd1b,
html:not(._1rqfhhdz) ._1rqfhhd1a {
  background: var(--xkp1ab1y);
}
html._1rqfhhdz ._1rqfhhd1d,
html:not(._1rqfhhdz) ._1rqfhhd1c {
  background: var(--xkp1ab1z);
}
html._1rqfhhdz ._1rqfhhd1f,
html:not(._1rqfhhdz) ._1rqfhhd1e {
  background: var(--xkp1ab20);
}
html._1rqfhhdz ._1rqfhhd1h,
html:not(._1rqfhhdz) ._1rqfhhd1g {
  background: var(--xkp1ab21);
}
html._1rqfhhdz ._1rqfhhd1j,
html:not(._1rqfhhdz) ._1rqfhhd1i {
  background: var(--xkp1ab22);
}
html._1rqfhhdz ._1rqfhhd1l,
html:not(._1rqfhhdz) ._1rqfhhd1k {
  background: var(--xkp1ab23);
}
html._1rqfhhdz ._1rqfhhd1n,
html:not(._1rqfhhdz) ._1rqfhhd1m {
  background: var(--xkp1ab24);
}
html._1rqfhhdz ._1rqfhhd1p,
html:not(._1rqfhhdz) ._1rqfhhd1o {
  background: var(--xkp1ab25);
}
html._1rqfhhdz ._1rqfhhd1r,
html:not(._1rqfhhdz) ._1rqfhhd1q {
  background: var(--xkp1ab26);
}
html._1rqfhhdz ._1rqfhhd1t,
html:not(._1rqfhhdz) ._1rqfhhd1s {
  background: var(--xkp1ab27);
}
html._1rqfhhdz ._1rqfhhd1v,
html:not(._1rqfhhdz) ._1rqfhhd1u {
  background: var(--xkp1ab28);
}
html._1rqfhhdz ._1rqfhhd1x,
html:not(._1rqfhhdz) ._1rqfhhd1w {
  background: var(--xkp1ab29);
}
html._1rqfhhdz ._1rqfhhd1z,
html:not(._1rqfhhdz) ._1rqfhhd1y {
  background: var(--xkp1ab2a);
}
html._1rqfhhdz ._1rqfhhd21,
html:not(._1rqfhhdz) ._1rqfhhd20 {
  background: var(--xkp1ab2b);
}
html._1rqfhhdz ._1rqfhhd23,
html:not(._1rqfhhdz) ._1rqfhhd22 {
  background: var(--xkp1ab2c);
}
html._1rqfhhdz ._1rqfhhd25,
html:not(._1rqfhhdz) ._1rqfhhd24 {
  background: var(--xkp1ab2d);
}
html._1rqfhhdz ._1rqfhhd27,
html:not(._1rqfhhdz) ._1rqfhhd26 {
  background: var(--xkp1ab2e);
}
html._1rqfhhdz ._1rqfhhd29,
html:not(._1rqfhhdz) ._1rqfhhd28 {
  background: var(--xkp1ab2f);
}
html._1rqfhhdz ._1rqfhhd2b,
html:not(._1rqfhhdz) ._1rqfhhd2a {
  background: var(--xkp1ab2g);
}
html._1rqfhhdz ._1rqfhhd2d,
html:not(._1rqfhhdz) ._1rqfhhd2c {
  background: var(--xkp1ab2h);
}
html._1rqfhhdz ._1rqfhhd2f,
html:not(._1rqfhhdz) ._1rqfhhd2e {
  background: var(--xkp1ab2i);
}
html._1rqfhhdz ._1rqfhhd2h,
html:not(._1rqfhhdz) ._1rqfhhd2g {
  background: var(--xkp1ab2j);
}
html._1rqfhhdz ._1rqfhhd2j,
html:not(._1rqfhhdz) ._1rqfhhd2i {
  background: var(--xkp1ab2k);
}
html._1rqfhhdz ._1rqfhhd2l,
html:not(._1rqfhhdz) ._1rqfhhd2k {
  background: var(--xkp1ab2l);
}
html._1rqfhhdz ._1rqfhhd2n,
html:not(._1rqfhhdz) ._1rqfhhd2m {
  background: var(--xkp1ab2m);
}
html._1rqfhhdz ._1rqfhhd2p,
html:not(._1rqfhhdz) ._1rqfhhd2o {
  background: var(--xkp1ab2n);
}
html._1rqfhhdz ._1rqfhhd2r,
html:not(._1rqfhhdz) ._1rqfhhd2q {
  background: var(--xkp1ab2o);
}
html._1rqfhhdz ._1rqfhhd2t,
html:not(._1rqfhhdz) ._1rqfhhd2s {
  background: var(--xkp1ab2p);
}
html._1rqfhhdz ._1rqfhhd2v,
html:not(._1rqfhhdz) ._1rqfhhd2u {
  background: var(--xkp1ab2q);
}
html._1rqfhhdz ._1rqfhhd2x,
html:not(._1rqfhhdz) ._1rqfhhd2w {
  background: var(--xkp1ab2r);
}
html._1rqfhhdz ._1rqfhhd2z,
html:not(._1rqfhhdz) ._1rqfhhd2y {
  background: var(--xkp1ab2s);
}
html._1rqfhhdz ._1rqfhhd31,
html:not(._1rqfhhdz) ._1rqfhhd30 {
  background: var(--xkp1ab2t);
}
html._1rqfhhdz ._1rqfhhd33,
html:not(._1rqfhhdz) ._1rqfhhd32 {
  background: var(--xkp1ab2u);
}
html._1rqfhhdz ._1rqfhhd35,
html:not(._1rqfhhdz) ._1rqfhhd34 {
  background: var(--xkp1ab2v);
}
html._1rqfhhdz ._1rqfhhd37,
html:not(._1rqfhhdz) ._1rqfhhd36 {
  box-shadow: var(--xkp1ab5l);
}
html._1rqfhhdz ._1rqfhhd39,
html:not(._1rqfhhdz) ._1rqfhhd38 {
  box-shadow: var(--xkp1ab5m);
}
html._1rqfhhdz ._1rqfhhd3b,
html:not(._1rqfhhdz) ._1rqfhhd3a {
  box-shadow: var(--xkp1ab5n);
}
html._1rqfhhdz ._1rqfhhd3d,
html:not(._1rqfhhdz) ._1rqfhhd3c {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abf);
}
html._1rqfhhdz ._1rqfhhd3f,
html:not(._1rqfhhdz) ._1rqfhhd3e {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abg);
}
html._1rqfhhdz ._1rqfhhd3h,
html:not(._1rqfhhdz) ._1rqfhhd3g {
  box-shadow: inset 0 0 0 var(--xkp1abz) var(--xkp1abf);
}
html._1rqfhhdz ._1rqfhhd3j,
html:not(._1rqfhhdz) ._1rqfhhd3i {
  box-shadow: inset 0 0 0 var(--xkp1abz) var(--xkp1abg);
}
html._1rqfhhdz ._1rqfhhd3l,
html:not(._1rqfhhdz) ._1rqfhhd3k {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abh);
}
html._1rqfhhdz ._1rqfhhd3n,
html:not(._1rqfhhdz) ._1rqfhhd3m {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abi);
}
html._1rqfhhdz ._1rqfhhd3p,
html:not(._1rqfhhdz) ._1rqfhhd3o {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abj);
}
html._1rqfhhdz ._1rqfhhd3r,
html:not(._1rqfhhdz) ._1rqfhhd3q {
  box-shadow: inset 0 0 0 var(--xkp1abz) var(--xkp1abj);
}
html._1rqfhhdz ._1rqfhhd3t,
html:not(._1rqfhhdz) ._1rqfhhd3s {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abk);
}
html._1rqfhhdz ._1rqfhhd3v,
html:not(._1rqfhhdz) ._1rqfhhd3u {
  box-shadow: inset 0 0 0 var(--xkp1abz) var(--xkp1abk);
}
html._1rqfhhdz ._1rqfhhd3x,
html:not(._1rqfhhdz) ._1rqfhhd3w {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abl);
}
html._1rqfhhdz ._1rqfhhd3z,
html:not(._1rqfhhdz) ._1rqfhhd3y {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abn);
}
html._1rqfhhdz ._1rqfhhd41,
html:not(._1rqfhhdz) ._1rqfhhd40 {
  box-shadow: inset 0 0 0 var(--xkp1abz) var(--xkp1abn);
}
html._1rqfhhdz ._1rqfhhd43,
html:not(._1rqfhhdz) ._1rqfhhd42 {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abo);
}
html._1rqfhhdz ._1rqfhhd45,
html:not(._1rqfhhdz) ._1rqfhhd44 {
  box-shadow: inset 0 0 0 var(--xkp1abz) var(--xkp1abo);
}
html._1rqfhhdz ._1rqfhhd47,
html:not(._1rqfhhdz) ._1rqfhhd46 {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abp);
}
html._1rqfhhdz ._1rqfhhd49,
html:not(._1rqfhhdz) ._1rqfhhd48 {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abq);
}
html._1rqfhhdz ._1rqfhhd4b,
html:not(._1rqfhhdz) ._1rqfhhd4a {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abr);
}
html._1rqfhhdz ._1rqfhhd4d,
html:not(._1rqfhhdz) ._1rqfhhd4c {
  box-shadow: inset 0 0 0 var(--xkp1abz) var(--xkp1abr);
}
html._1rqfhhdz ._1rqfhhd4f,
html:not(._1rqfhhdz) ._1rqfhhd4e {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abs);
}
html._1rqfhhdz ._1rqfhhd4h,
html:not(._1rqfhhdz) ._1rqfhhd4g {
  box-shadow: inset 0 0 0 var(--xkp1abz) var(--xkp1abs);
}
html._1rqfhhdz ._1rqfhhd4j,
html:not(._1rqfhhdz) ._1rqfhhd4i {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abt);
}
html._1rqfhhdz ._1rqfhhd4l,
html:not(._1rqfhhdz) ._1rqfhhd4k {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abu);
}
html._1rqfhhdz ._1rqfhhd4n,
html:not(._1rqfhhdz) ._1rqfhhd4m {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abv);
}
html._1rqfhhdz ._1rqfhhd4p,
html:not(._1rqfhhdz) ._1rqfhhd4o {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abw);
}
html._1rqfhhdz ._1rqfhhd4r,
html:not(._1rqfhhdz) ._1rqfhhd4q {
  box-shadow: inset 0 0 0 var(--xkp1aby) var(--xkp1abx);
}
html._1rqfhhdz ._1rqfhhd4t,
html:not(._1rqfhhdz) ._1rqfhhd4s {
  box-shadow: 0 0 0 var(--xkp1ab10) var(--xkp1abm);
}
._1rqfhhd4u {
  display: none;
}
._1rqfhhd4y {
  display: block;
}
._1rqfhhd52 {
  display: inline;
}
._1rqfhhd56 {
  display: inline-block;
}
._1rqfhhd5a {
  display: flex;
}
._1rqfhhd5e {
  position: relative;
}
._1rqfhhd5i {
  position: absolute;
}
._1rqfhhd5m {
  position: fixed;
}
._1rqfhhd5q {
  border-radius: 0;
}
._1rqfhhd5u {
  border-radius: 9999px;
}
._1rqfhhd5y {
  border-radius: var(--xkp1abb);
}
._1rqfhhd62 {
  border-radius: var(--xkp1abc);
}
._1rqfhhd66 {
  border-radius: var(--xkp1abd);
}
._1rqfhhd6a {
  border-radius: var(--xkp1abe);
}
._1rqfhhd6e {
  padding-top: var(--xkp1ab0);
}
._1rqfhhd6i {
  padding-top: var(--xkp1ab1);
}
._1rqfhhd6m {
  padding-top: var(--xkp1ab2);
}
._1rqfhhd6q {
  padding-top: var(--xkp1ab3);
}
._1rqfhhd6u {
  padding-top: var(--xkp1ab4);
}
._1rqfhhd6y {
  padding-top: var(--xkp1ab5);
}
._1rqfhhd72 {
  padding-top: var(--xkp1ab6);
}
._1rqfhhd76 {
  padding-top: var(--xkp1ab7);
}
._1rqfhhd7a {
  padding-top: var(--xkp1ab8);
}
._1rqfhhd7e {
  padding-top: 0;
}
._1rqfhhd7i {
  padding-bottom: var(--xkp1ab0);
}
._1rqfhhd7m {
  padding-bottom: var(--xkp1ab1);
}
._1rqfhhd7q {
  padding-bottom: var(--xkp1ab2);
}
._1rqfhhd7u {
  padding-bottom: var(--xkp1ab3);
}
._1rqfhhd7y {
  padding-bottom: var(--xkp1ab4);
}
._1rqfhhd82 {
  padding-bottom: var(--xkp1ab5);
}
._1rqfhhd86 {
  padding-bottom: var(--xkp1ab6);
}
._1rqfhhd8a {
  padding-bottom: var(--xkp1ab7);
}
._1rqfhhd8e {
  padding-bottom: var(--xkp1ab8);
}
._1rqfhhd8i {
  padding-bottom: 0;
}
._1rqfhhd8m {
  padding-right: var(--xkp1ab0);
}
._1rqfhhd8q {
  padding-right: var(--xkp1ab1);
}
._1rqfhhd8u {
  padding-right: var(--xkp1ab2);
}
._1rqfhhd8y {
  padding-right: var(--xkp1ab3);
}
._1rqfhhd92 {
  padding-right: var(--xkp1ab4);
}
._1rqfhhd96 {
  padding-right: var(--xkp1ab5);
}
._1rqfhhd9a {
  padding-right: var(--xkp1ab6);
}
._1rqfhhd9e {
  padding-right: var(--xkp1ab7);
}
._1rqfhhd9i {
  padding-right: var(--xkp1ab8);
}
._1rqfhhd9m {
  padding-right: 0;
}
._1rqfhhd9q {
  padding-left: var(--xkp1ab0);
}
._1rqfhhd9u {
  padding-left: var(--xkp1ab1);
}
._1rqfhhd9y {
  padding-left: var(--xkp1ab2);
}
._1rqfhhda2 {
  padding-left: var(--xkp1ab3);
}
._1rqfhhda6 {
  padding-left: var(--xkp1ab4);
}
._1rqfhhdaa {
  padding-left: var(--xkp1ab5);
}
._1rqfhhdae {
  padding-left: var(--xkp1ab6);
}
._1rqfhhdai {
  padding-left: var(--xkp1ab7);
}
._1rqfhhdam {
  padding-left: var(--xkp1ab8);
}
._1rqfhhdaq {
  padding-left: 0;
}
._1rqfhhdau {
  margin-top: var(--xkp1ab0);
}
._1rqfhhday {
  margin-top: var(--xkp1ab1);
}
._1rqfhhdb2 {
  margin-top: var(--xkp1ab2);
}
._1rqfhhdb6 {
  margin-top: var(--xkp1ab3);
}
._1rqfhhdba {
  margin-top: var(--xkp1ab4);
}
._1rqfhhdbe {
  margin-top: var(--xkp1ab5);
}
._1rqfhhdbi {
  margin-top: var(--xkp1ab6);
}
._1rqfhhdbm {
  margin-top: var(--xkp1ab7);
}
._1rqfhhdbq {
  margin-top: var(--xkp1ab8);
}
._1rqfhhdbu {
  margin-top: 0;
}
._1rqfhhdby {
  margin-bottom: var(--xkp1ab0);
}
._1rqfhhdc2 {
  margin-bottom: var(--xkp1ab1);
}
._1rqfhhdc6 {
  margin-bottom: var(--xkp1ab2);
}
._1rqfhhdca {
  margin-bottom: var(--xkp1ab3);
}
._1rqfhhdce {
  margin-bottom: var(--xkp1ab4);
}
._1rqfhhdci {
  margin-bottom: var(--xkp1ab5);
}
._1rqfhhdcm {
  margin-bottom: var(--xkp1ab6);
}
._1rqfhhdcq {
  margin-bottom: var(--xkp1ab7);
}
._1rqfhhdcu {
  margin-bottom: var(--xkp1ab8);
}
._1rqfhhdcy {
  margin-bottom: 0;
}
._1rqfhhdd2 {
  margin-right: var(--xkp1ab0);
}
._1rqfhhdd6 {
  margin-right: var(--xkp1ab1);
}
._1rqfhhdda {
  margin-right: var(--xkp1ab2);
}
._1rqfhhdde {
  margin-right: var(--xkp1ab3);
}
._1rqfhhddi {
  margin-right: var(--xkp1ab4);
}
._1rqfhhddm {
  margin-right: var(--xkp1ab5);
}
._1rqfhhddq {
  margin-right: var(--xkp1ab6);
}
._1rqfhhddu {
  margin-right: var(--xkp1ab7);
}
._1rqfhhddy {
  margin-right: var(--xkp1ab8);
}
._1rqfhhde2 {
  margin-right: 0;
}
._1rqfhhde6 {
  margin-left: var(--xkp1ab0);
}
._1rqfhhdea {
  margin-left: var(--xkp1ab1);
}
._1rqfhhdee {
  margin-left: var(--xkp1ab2);
}
._1rqfhhdei {
  margin-left: var(--xkp1ab3);
}
._1rqfhhdem {
  margin-left: var(--xkp1ab4);
}
._1rqfhhdeq {
  margin-left: var(--xkp1ab5);
}
._1rqfhhdeu {
  margin-left: var(--xkp1ab6);
}
._1rqfhhdey {
  margin-left: var(--xkp1ab7);
}
._1rqfhhdf2 {
  margin-left: var(--xkp1ab8);
}
._1rqfhhdf6 {
  margin-left: 0;
}
._1rqfhhdfa {
  align-items: flex-start;
}
._1rqfhhdfe {
  align-items: center;
}
._1rqfhhdfi {
  align-items: flex-end;
}
._1rqfhhdfm {
  justify-content: flex-start;
}
._1rqfhhdfq {
  justify-content: center;
}
._1rqfhhdfu {
  justify-content: flex-end;
}
._1rqfhhdfy {
  justify-content: space-between;
}
._1rqfhhdg2 {
  flex-direction: row;
}
._1rqfhhdg6 {
  flex-direction: row-reverse;
}
._1rqfhhdga {
  flex-direction: column;
}
._1rqfhhdge {
  flex-direction: column-reverse;
}
._1rqfhhdgi {
  flex-wrap: wrap;
}
._1rqfhhdgm {
  flex-wrap: nowrap;
}
._1rqfhhdgq {
  flex-shrink: 0;
}
._1rqfhhdgu {
  flex-grow: 0;
}
._1rqfhhdgy {
  flex-grow: 1;
}
._1rqfhhdh2 {
  text-align: left;
}
._1rqfhhdh6 {
  text-align: center;
}
._1rqfhhdha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1rqfhhd4v {
    display: none;
  }
  ._1rqfhhd4z {
    display: block;
  }
  ._1rqfhhd53 {
    display: inline;
  }
  ._1rqfhhd57 {
    display: inline-block;
  }
  ._1rqfhhd5b {
    display: flex;
  }
  ._1rqfhhd5f {
    position: relative;
  }
  ._1rqfhhd5j {
    position: absolute;
  }
  ._1rqfhhd5n {
    position: fixed;
  }
  ._1rqfhhd5r {
    border-radius: 0;
  }
  ._1rqfhhd5v {
    border-radius: 9999px;
  }
  ._1rqfhhd5z {
    border-radius: var(--xkp1abb);
  }
  ._1rqfhhd63 {
    border-radius: var(--xkp1abc);
  }
  ._1rqfhhd67 {
    border-radius: var(--xkp1abd);
  }
  ._1rqfhhd6b {
    border-radius: var(--xkp1abe);
  }
  ._1rqfhhd6f {
    padding-top: var(--xkp1ab0);
  }
  ._1rqfhhd6j {
    padding-top: var(--xkp1ab1);
  }
  ._1rqfhhd6n {
    padding-top: var(--xkp1ab2);
  }
  ._1rqfhhd6r {
    padding-top: var(--xkp1ab3);
  }
  ._1rqfhhd6v {
    padding-top: var(--xkp1ab4);
  }
  ._1rqfhhd6z {
    padding-top: var(--xkp1ab5);
  }
  ._1rqfhhd73 {
    padding-top: var(--xkp1ab6);
  }
  ._1rqfhhd77 {
    padding-top: var(--xkp1ab7);
  }
  ._1rqfhhd7b {
    padding-top: var(--xkp1ab8);
  }
  ._1rqfhhd7f {
    padding-top: 0;
  }
  ._1rqfhhd7j {
    padding-bottom: var(--xkp1ab0);
  }
  ._1rqfhhd7n {
    padding-bottom: var(--xkp1ab1);
  }
  ._1rqfhhd7r {
    padding-bottom: var(--xkp1ab2);
  }
  ._1rqfhhd7v {
    padding-bottom: var(--xkp1ab3);
  }
  ._1rqfhhd7z {
    padding-bottom: var(--xkp1ab4);
  }
  ._1rqfhhd83 {
    padding-bottom: var(--xkp1ab5);
  }
  ._1rqfhhd87 {
    padding-bottom: var(--xkp1ab6);
  }
  ._1rqfhhd8b {
    padding-bottom: var(--xkp1ab7);
  }
  ._1rqfhhd8f {
    padding-bottom: var(--xkp1ab8);
  }
  ._1rqfhhd8j {
    padding-bottom: 0;
  }
  ._1rqfhhd8n {
    padding-right: var(--xkp1ab0);
  }
  ._1rqfhhd8r {
    padding-right: var(--xkp1ab1);
  }
  ._1rqfhhd8v {
    padding-right: var(--xkp1ab2);
  }
  ._1rqfhhd8z {
    padding-right: var(--xkp1ab3);
  }
  ._1rqfhhd93 {
    padding-right: var(--xkp1ab4);
  }
  ._1rqfhhd97 {
    padding-right: var(--xkp1ab5);
  }
  ._1rqfhhd9b {
    padding-right: var(--xkp1ab6);
  }
  ._1rqfhhd9f {
    padding-right: var(--xkp1ab7);
  }
  ._1rqfhhd9j {
    padding-right: var(--xkp1ab8);
  }
  ._1rqfhhd9n {
    padding-right: 0;
  }
  ._1rqfhhd9r {
    padding-left: var(--xkp1ab0);
  }
  ._1rqfhhd9v {
    padding-left: var(--xkp1ab1);
  }
  ._1rqfhhd9z {
    padding-left: var(--xkp1ab2);
  }
  ._1rqfhhda3 {
    padding-left: var(--xkp1ab3);
  }
  ._1rqfhhda7 {
    padding-left: var(--xkp1ab4);
  }
  ._1rqfhhdab {
    padding-left: var(--xkp1ab5);
  }
  ._1rqfhhdaf {
    padding-left: var(--xkp1ab6);
  }
  ._1rqfhhdaj {
    padding-left: var(--xkp1ab7);
  }
  ._1rqfhhdan {
    padding-left: var(--xkp1ab8);
  }
  ._1rqfhhdar {
    padding-left: 0;
  }
  ._1rqfhhdav {
    margin-top: var(--xkp1ab0);
  }
  ._1rqfhhdaz {
    margin-top: var(--xkp1ab1);
  }
  ._1rqfhhdb3 {
    margin-top: var(--xkp1ab2);
  }
  ._1rqfhhdb7 {
    margin-top: var(--xkp1ab3);
  }
  ._1rqfhhdbb {
    margin-top: var(--xkp1ab4);
  }
  ._1rqfhhdbf {
    margin-top: var(--xkp1ab5);
  }
  ._1rqfhhdbj {
    margin-top: var(--xkp1ab6);
  }
  ._1rqfhhdbn {
    margin-top: var(--xkp1ab7);
  }
  ._1rqfhhdbr {
    margin-top: var(--xkp1ab8);
  }
  ._1rqfhhdbv {
    margin-top: 0;
  }
  ._1rqfhhdbz {
    margin-bottom: var(--xkp1ab0);
  }
  ._1rqfhhdc3 {
    margin-bottom: var(--xkp1ab1);
  }
  ._1rqfhhdc7 {
    margin-bottom: var(--xkp1ab2);
  }
  ._1rqfhhdcb {
    margin-bottom: var(--xkp1ab3);
  }
  ._1rqfhhdcf {
    margin-bottom: var(--xkp1ab4);
  }
  ._1rqfhhdcj {
    margin-bottom: var(--xkp1ab5);
  }
  ._1rqfhhdcn {
    margin-bottom: var(--xkp1ab6);
  }
  ._1rqfhhdcr {
    margin-bottom: var(--xkp1ab7);
  }
  ._1rqfhhdcv {
    margin-bottom: var(--xkp1ab8);
  }
  ._1rqfhhdcz {
    margin-bottom: 0;
  }
  ._1rqfhhdd3 {
    margin-right: var(--xkp1ab0);
  }
  ._1rqfhhdd7 {
    margin-right: var(--xkp1ab1);
  }
  ._1rqfhhddb {
    margin-right: var(--xkp1ab2);
  }
  ._1rqfhhddf {
    margin-right: var(--xkp1ab3);
  }
  ._1rqfhhddj {
    margin-right: var(--xkp1ab4);
  }
  ._1rqfhhddn {
    margin-right: var(--xkp1ab5);
  }
  ._1rqfhhddr {
    margin-right: var(--xkp1ab6);
  }
  ._1rqfhhddv {
    margin-right: var(--xkp1ab7);
  }
  ._1rqfhhddz {
    margin-right: var(--xkp1ab8);
  }
  ._1rqfhhde3 {
    margin-right: 0;
  }
  ._1rqfhhde7 {
    margin-left: var(--xkp1ab0);
  }
  ._1rqfhhdeb {
    margin-left: var(--xkp1ab1);
  }
  ._1rqfhhdef {
    margin-left: var(--xkp1ab2);
  }
  ._1rqfhhdej {
    margin-left: var(--xkp1ab3);
  }
  ._1rqfhhden {
    margin-left: var(--xkp1ab4);
  }
  ._1rqfhhder {
    margin-left: var(--xkp1ab5);
  }
  ._1rqfhhdev {
    margin-left: var(--xkp1ab6);
  }
  ._1rqfhhdez {
    margin-left: var(--xkp1ab7);
  }
  ._1rqfhhdf3 {
    margin-left: var(--xkp1ab8);
  }
  ._1rqfhhdf7 {
    margin-left: 0;
  }
  ._1rqfhhdfb {
    align-items: flex-start;
  }
  ._1rqfhhdff {
    align-items: center;
  }
  ._1rqfhhdfj {
    align-items: flex-end;
  }
  ._1rqfhhdfn {
    justify-content: flex-start;
  }
  ._1rqfhhdfr {
    justify-content: center;
  }
  ._1rqfhhdfv {
    justify-content: flex-end;
  }
  ._1rqfhhdfz {
    justify-content: space-between;
  }
  ._1rqfhhdg3 {
    flex-direction: row;
  }
  ._1rqfhhdg7 {
    flex-direction: row-reverse;
  }
  ._1rqfhhdgb {
    flex-direction: column;
  }
  ._1rqfhhdgf {
    flex-direction: column-reverse;
  }
  ._1rqfhhdgj {
    flex-wrap: wrap;
  }
  ._1rqfhhdgn {
    flex-wrap: nowrap;
  }
  ._1rqfhhdgr {
    flex-shrink: 0;
  }
  ._1rqfhhdgv {
    flex-grow: 0;
  }
  ._1rqfhhdgz {
    flex-grow: 1;
  }
  ._1rqfhhdh3 {
    text-align: left;
  }
  ._1rqfhhdh7 {
    text-align: center;
  }
  ._1rqfhhdhb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1rqfhhd4w {
    display: none;
  }
  ._1rqfhhd50 {
    display: block;
  }
  ._1rqfhhd54 {
    display: inline;
  }
  ._1rqfhhd58 {
    display: inline-block;
  }
  ._1rqfhhd5c {
    display: flex;
  }
  ._1rqfhhd5g {
    position: relative;
  }
  ._1rqfhhd5k {
    position: absolute;
  }
  ._1rqfhhd5o {
    position: fixed;
  }
  ._1rqfhhd5s {
    border-radius: 0;
  }
  ._1rqfhhd5w {
    border-radius: 9999px;
  }
  ._1rqfhhd60 {
    border-radius: var(--xkp1abb);
  }
  ._1rqfhhd64 {
    border-radius: var(--xkp1abc);
  }
  ._1rqfhhd68 {
    border-radius: var(--xkp1abd);
  }
  ._1rqfhhd6c {
    border-radius: var(--xkp1abe);
  }
  ._1rqfhhd6g {
    padding-top: var(--xkp1ab0);
  }
  ._1rqfhhd6k {
    padding-top: var(--xkp1ab1);
  }
  ._1rqfhhd6o {
    padding-top: var(--xkp1ab2);
  }
  ._1rqfhhd6s {
    padding-top: var(--xkp1ab3);
  }
  ._1rqfhhd6w {
    padding-top: var(--xkp1ab4);
  }
  ._1rqfhhd70 {
    padding-top: var(--xkp1ab5);
  }
  ._1rqfhhd74 {
    padding-top: var(--xkp1ab6);
  }
  ._1rqfhhd78 {
    padding-top: var(--xkp1ab7);
  }
  ._1rqfhhd7c {
    padding-top: var(--xkp1ab8);
  }
  ._1rqfhhd7g {
    padding-top: 0;
  }
  ._1rqfhhd7k {
    padding-bottom: var(--xkp1ab0);
  }
  ._1rqfhhd7o {
    padding-bottom: var(--xkp1ab1);
  }
  ._1rqfhhd7s {
    padding-bottom: var(--xkp1ab2);
  }
  ._1rqfhhd7w {
    padding-bottom: var(--xkp1ab3);
  }
  ._1rqfhhd80 {
    padding-bottom: var(--xkp1ab4);
  }
  ._1rqfhhd84 {
    padding-bottom: var(--xkp1ab5);
  }
  ._1rqfhhd88 {
    padding-bottom: var(--xkp1ab6);
  }
  ._1rqfhhd8c {
    padding-bottom: var(--xkp1ab7);
  }
  ._1rqfhhd8g {
    padding-bottom: var(--xkp1ab8);
  }
  ._1rqfhhd8k {
    padding-bottom: 0;
  }
  ._1rqfhhd8o {
    padding-right: var(--xkp1ab0);
  }
  ._1rqfhhd8s {
    padding-right: var(--xkp1ab1);
  }
  ._1rqfhhd8w {
    padding-right: var(--xkp1ab2);
  }
  ._1rqfhhd90 {
    padding-right: var(--xkp1ab3);
  }
  ._1rqfhhd94 {
    padding-right: var(--xkp1ab4);
  }
  ._1rqfhhd98 {
    padding-right: var(--xkp1ab5);
  }
  ._1rqfhhd9c {
    padding-right: var(--xkp1ab6);
  }
  ._1rqfhhd9g {
    padding-right: var(--xkp1ab7);
  }
  ._1rqfhhd9k {
    padding-right: var(--xkp1ab8);
  }
  ._1rqfhhd9o {
    padding-right: 0;
  }
  ._1rqfhhd9s {
    padding-left: var(--xkp1ab0);
  }
  ._1rqfhhd9w {
    padding-left: var(--xkp1ab1);
  }
  ._1rqfhhda0 {
    padding-left: var(--xkp1ab2);
  }
  ._1rqfhhda4 {
    padding-left: var(--xkp1ab3);
  }
  ._1rqfhhda8 {
    padding-left: var(--xkp1ab4);
  }
  ._1rqfhhdac {
    padding-left: var(--xkp1ab5);
  }
  ._1rqfhhdag {
    padding-left: var(--xkp1ab6);
  }
  ._1rqfhhdak {
    padding-left: var(--xkp1ab7);
  }
  ._1rqfhhdao {
    padding-left: var(--xkp1ab8);
  }
  ._1rqfhhdas {
    padding-left: 0;
  }
  ._1rqfhhdaw {
    margin-top: var(--xkp1ab0);
  }
  ._1rqfhhdb0 {
    margin-top: var(--xkp1ab1);
  }
  ._1rqfhhdb4 {
    margin-top: var(--xkp1ab2);
  }
  ._1rqfhhdb8 {
    margin-top: var(--xkp1ab3);
  }
  ._1rqfhhdbc {
    margin-top: var(--xkp1ab4);
  }
  ._1rqfhhdbg {
    margin-top: var(--xkp1ab5);
  }
  ._1rqfhhdbk {
    margin-top: var(--xkp1ab6);
  }
  ._1rqfhhdbo {
    margin-top: var(--xkp1ab7);
  }
  ._1rqfhhdbs {
    margin-top: var(--xkp1ab8);
  }
  ._1rqfhhdbw {
    margin-top: 0;
  }
  ._1rqfhhdc0 {
    margin-bottom: var(--xkp1ab0);
  }
  ._1rqfhhdc4 {
    margin-bottom: var(--xkp1ab1);
  }
  ._1rqfhhdc8 {
    margin-bottom: var(--xkp1ab2);
  }
  ._1rqfhhdcc {
    margin-bottom: var(--xkp1ab3);
  }
  ._1rqfhhdcg {
    margin-bottom: var(--xkp1ab4);
  }
  ._1rqfhhdck {
    margin-bottom: var(--xkp1ab5);
  }
  ._1rqfhhdco {
    margin-bottom: var(--xkp1ab6);
  }
  ._1rqfhhdcs {
    margin-bottom: var(--xkp1ab7);
  }
  ._1rqfhhdcw {
    margin-bottom: var(--xkp1ab8);
  }
  ._1rqfhhdd0 {
    margin-bottom: 0;
  }
  ._1rqfhhdd4 {
    margin-right: var(--xkp1ab0);
  }
  ._1rqfhhdd8 {
    margin-right: var(--xkp1ab1);
  }
  ._1rqfhhddc {
    margin-right: var(--xkp1ab2);
  }
  ._1rqfhhddg {
    margin-right: var(--xkp1ab3);
  }
  ._1rqfhhddk {
    margin-right: var(--xkp1ab4);
  }
  ._1rqfhhddo {
    margin-right: var(--xkp1ab5);
  }
  ._1rqfhhdds {
    margin-right: var(--xkp1ab6);
  }
  ._1rqfhhddw {
    margin-right: var(--xkp1ab7);
  }
  ._1rqfhhde0 {
    margin-right: var(--xkp1ab8);
  }
  ._1rqfhhde4 {
    margin-right: 0;
  }
  ._1rqfhhde8 {
    margin-left: var(--xkp1ab0);
  }
  ._1rqfhhdec {
    margin-left: var(--xkp1ab1);
  }
  ._1rqfhhdeg {
    margin-left: var(--xkp1ab2);
  }
  ._1rqfhhdek {
    margin-left: var(--xkp1ab3);
  }
  ._1rqfhhdeo {
    margin-left: var(--xkp1ab4);
  }
  ._1rqfhhdes {
    margin-left: var(--xkp1ab5);
  }
  ._1rqfhhdew {
    margin-left: var(--xkp1ab6);
  }
  ._1rqfhhdf0 {
    margin-left: var(--xkp1ab7);
  }
  ._1rqfhhdf4 {
    margin-left: var(--xkp1ab8);
  }
  ._1rqfhhdf8 {
    margin-left: 0;
  }
  ._1rqfhhdfc {
    align-items: flex-start;
  }
  ._1rqfhhdfg {
    align-items: center;
  }
  ._1rqfhhdfk {
    align-items: flex-end;
  }
  ._1rqfhhdfo {
    justify-content: flex-start;
  }
  ._1rqfhhdfs {
    justify-content: center;
  }
  ._1rqfhhdfw {
    justify-content: flex-end;
  }
  ._1rqfhhdg0 {
    justify-content: space-between;
  }
  ._1rqfhhdg4 {
    flex-direction: row;
  }
  ._1rqfhhdg8 {
    flex-direction: row-reverse;
  }
  ._1rqfhhdgc {
    flex-direction: column;
  }
  ._1rqfhhdgg {
    flex-direction: column-reverse;
  }
  ._1rqfhhdgk {
    flex-wrap: wrap;
  }
  ._1rqfhhdgo {
    flex-wrap: nowrap;
  }
  ._1rqfhhdgs {
    flex-shrink: 0;
  }
  ._1rqfhhdgw {
    flex-grow: 0;
  }
  ._1rqfhhdh0 {
    flex-grow: 1;
  }
  ._1rqfhhdh4 {
    text-align: left;
  }
  ._1rqfhhdh8 {
    text-align: center;
  }
  ._1rqfhhdhc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1rqfhhd4x {
    display: none;
  }
  ._1rqfhhd51 {
    display: block;
  }
  ._1rqfhhd55 {
    display: inline;
  }
  ._1rqfhhd59 {
    display: inline-block;
  }
  ._1rqfhhd5d {
    display: flex;
  }
  ._1rqfhhd5h {
    position: relative;
  }
  ._1rqfhhd5l {
    position: absolute;
  }
  ._1rqfhhd5p {
    position: fixed;
  }
  ._1rqfhhd5t {
    border-radius: 0;
  }
  ._1rqfhhd5x {
    border-radius: 9999px;
  }
  ._1rqfhhd61 {
    border-radius: var(--xkp1abb);
  }
  ._1rqfhhd65 {
    border-radius: var(--xkp1abc);
  }
  ._1rqfhhd69 {
    border-radius: var(--xkp1abd);
  }
  ._1rqfhhd6d {
    border-radius: var(--xkp1abe);
  }
  ._1rqfhhd6h {
    padding-top: var(--xkp1ab0);
  }
  ._1rqfhhd6l {
    padding-top: var(--xkp1ab1);
  }
  ._1rqfhhd6p {
    padding-top: var(--xkp1ab2);
  }
  ._1rqfhhd6t {
    padding-top: var(--xkp1ab3);
  }
  ._1rqfhhd6x {
    padding-top: var(--xkp1ab4);
  }
  ._1rqfhhd71 {
    padding-top: var(--xkp1ab5);
  }
  ._1rqfhhd75 {
    padding-top: var(--xkp1ab6);
  }
  ._1rqfhhd79 {
    padding-top: var(--xkp1ab7);
  }
  ._1rqfhhd7d {
    padding-top: var(--xkp1ab8);
  }
  ._1rqfhhd7h {
    padding-top: 0;
  }
  ._1rqfhhd7l {
    padding-bottom: var(--xkp1ab0);
  }
  ._1rqfhhd7p {
    padding-bottom: var(--xkp1ab1);
  }
  ._1rqfhhd7t {
    padding-bottom: var(--xkp1ab2);
  }
  ._1rqfhhd7x {
    padding-bottom: var(--xkp1ab3);
  }
  ._1rqfhhd81 {
    padding-bottom: var(--xkp1ab4);
  }
  ._1rqfhhd85 {
    padding-bottom: var(--xkp1ab5);
  }
  ._1rqfhhd89 {
    padding-bottom: var(--xkp1ab6);
  }
  ._1rqfhhd8d {
    padding-bottom: var(--xkp1ab7);
  }
  ._1rqfhhd8h {
    padding-bottom: var(--xkp1ab8);
  }
  ._1rqfhhd8l {
    padding-bottom: 0;
  }
  ._1rqfhhd8p {
    padding-right: var(--xkp1ab0);
  }
  ._1rqfhhd8t {
    padding-right: var(--xkp1ab1);
  }
  ._1rqfhhd8x {
    padding-right: var(--xkp1ab2);
  }
  ._1rqfhhd91 {
    padding-right: var(--xkp1ab3);
  }
  ._1rqfhhd95 {
    padding-right: var(--xkp1ab4);
  }
  ._1rqfhhd99 {
    padding-right: var(--xkp1ab5);
  }
  ._1rqfhhd9d {
    padding-right: var(--xkp1ab6);
  }
  ._1rqfhhd9h {
    padding-right: var(--xkp1ab7);
  }
  ._1rqfhhd9l {
    padding-right: var(--xkp1ab8);
  }
  ._1rqfhhd9p {
    padding-right: 0;
  }
  ._1rqfhhd9t {
    padding-left: var(--xkp1ab0);
  }
  ._1rqfhhd9x {
    padding-left: var(--xkp1ab1);
  }
  ._1rqfhhda1 {
    padding-left: var(--xkp1ab2);
  }
  ._1rqfhhda5 {
    padding-left: var(--xkp1ab3);
  }
  ._1rqfhhda9 {
    padding-left: var(--xkp1ab4);
  }
  ._1rqfhhdad {
    padding-left: var(--xkp1ab5);
  }
  ._1rqfhhdah {
    padding-left: var(--xkp1ab6);
  }
  ._1rqfhhdal {
    padding-left: var(--xkp1ab7);
  }
  ._1rqfhhdap {
    padding-left: var(--xkp1ab8);
  }
  ._1rqfhhdat {
    padding-left: 0;
  }
  ._1rqfhhdax {
    margin-top: var(--xkp1ab0);
  }
  ._1rqfhhdb1 {
    margin-top: var(--xkp1ab1);
  }
  ._1rqfhhdb5 {
    margin-top: var(--xkp1ab2);
  }
  ._1rqfhhdb9 {
    margin-top: var(--xkp1ab3);
  }
  ._1rqfhhdbd {
    margin-top: var(--xkp1ab4);
  }
  ._1rqfhhdbh {
    margin-top: var(--xkp1ab5);
  }
  ._1rqfhhdbl {
    margin-top: var(--xkp1ab6);
  }
  ._1rqfhhdbp {
    margin-top: var(--xkp1ab7);
  }
  ._1rqfhhdbt {
    margin-top: var(--xkp1ab8);
  }
  ._1rqfhhdbx {
    margin-top: 0;
  }
  ._1rqfhhdc1 {
    margin-bottom: var(--xkp1ab0);
  }
  ._1rqfhhdc5 {
    margin-bottom: var(--xkp1ab1);
  }
  ._1rqfhhdc9 {
    margin-bottom: var(--xkp1ab2);
  }
  ._1rqfhhdcd {
    margin-bottom: var(--xkp1ab3);
  }
  ._1rqfhhdch {
    margin-bottom: var(--xkp1ab4);
  }
  ._1rqfhhdcl {
    margin-bottom: var(--xkp1ab5);
  }
  ._1rqfhhdcp {
    margin-bottom: var(--xkp1ab6);
  }
  ._1rqfhhdct {
    margin-bottom: var(--xkp1ab7);
  }
  ._1rqfhhdcx {
    margin-bottom: var(--xkp1ab8);
  }
  ._1rqfhhdd1 {
    margin-bottom: 0;
  }
  ._1rqfhhdd5 {
    margin-right: var(--xkp1ab0);
  }
  ._1rqfhhdd9 {
    margin-right: var(--xkp1ab1);
  }
  ._1rqfhhddd {
    margin-right: var(--xkp1ab2);
  }
  ._1rqfhhddh {
    margin-right: var(--xkp1ab3);
  }
  ._1rqfhhddl {
    margin-right: var(--xkp1ab4);
  }
  ._1rqfhhddp {
    margin-right: var(--xkp1ab5);
  }
  ._1rqfhhddt {
    margin-right: var(--xkp1ab6);
  }
  ._1rqfhhddx {
    margin-right: var(--xkp1ab7);
  }
  ._1rqfhhde1 {
    margin-right: var(--xkp1ab8);
  }
  ._1rqfhhde5 {
    margin-right: 0;
  }
  ._1rqfhhde9 {
    margin-left: var(--xkp1ab0);
  }
  ._1rqfhhded {
    margin-left: var(--xkp1ab1);
  }
  ._1rqfhhdeh {
    margin-left: var(--xkp1ab2);
  }
  ._1rqfhhdel {
    margin-left: var(--xkp1ab3);
  }
  ._1rqfhhdep {
    margin-left: var(--xkp1ab4);
  }
  ._1rqfhhdet {
    margin-left: var(--xkp1ab5);
  }
  ._1rqfhhdex {
    margin-left: var(--xkp1ab6);
  }
  ._1rqfhhdf1 {
    margin-left: var(--xkp1ab7);
  }
  ._1rqfhhdf5 {
    margin-left: var(--xkp1ab8);
  }
  ._1rqfhhdf9 {
    margin-left: 0;
  }
  ._1rqfhhdfd {
    align-items: flex-start;
  }
  ._1rqfhhdfh {
    align-items: center;
  }
  ._1rqfhhdfl {
    align-items: flex-end;
  }
  ._1rqfhhdfp {
    justify-content: flex-start;
  }
  ._1rqfhhdft {
    justify-content: center;
  }
  ._1rqfhhdfx {
    justify-content: flex-end;
  }
  ._1rqfhhdg1 {
    justify-content: space-between;
  }
  ._1rqfhhdg5 {
    flex-direction: row;
  }
  ._1rqfhhdg9 {
    flex-direction: row-reverse;
  }
  ._1rqfhhdgd {
    flex-direction: column;
  }
  ._1rqfhhdgh {
    flex-direction: column-reverse;
  }
  ._1rqfhhdgl {
    flex-wrap: wrap;
  }
  ._1rqfhhdgp {
    flex-wrap: nowrap;
  }
  ._1rqfhhdgt {
    flex-shrink: 0;
  }
  ._1rqfhhdgx {
    flex-grow: 0;
  }
  ._1rqfhhdh1 {
    flex-grow: 1;
  }
  ._1rqfhhdh5 {
    text-align: left;
  }
  ._1rqfhhdh9 {
    text-align: center;
  }
  ._1rqfhhdhd {
    text-align: right;
  }
}
._1feexz14 {
  font-size: var(--_1feexz10);
  line-height: var(--_1feexz11);
}
._1feexz14:before {
  content: "";
  display: table;
  margin-bottom: var(--_1feexz12);
}
._1feexz14:after {
  content: "";
  display: table;
  margin-top: var(--_1feexz13);
}
._1blv4tb0 {
  font-family: var(--xkp1ab2w);
}
._1blv4tb1 {
  font-weight: var(--xkp1ab46);
}
._1blv4tb2 {
  font-weight: var(--xkp1ab47);
}
._1blv4tb3 {
  font-weight: var(--xkp1ab48);
}
._1blv4tb4 {
  --_1feexz10: var(--xkp1ab32);
  --_1feexz11: var(--xkp1ab33);
  --_1feexz12: var(--xkp1ab35);
  --_1feexz13: var(--xkp1ab36);
}
._1blv4tb7 {
  --_1feexz10: var(--xkp1ab3c);
  --_1feexz11: var(--xkp1ab3d);
  --_1feexz12: var(--xkp1ab3f);
  --_1feexz13: var(--xkp1ab3g);
}
._1blv4tba {
  --_1feexz10: var(--xkp1ab3m);
  --_1feexz11: var(--xkp1ab3n);
  --_1feexz12: var(--xkp1ab3p);
  --_1feexz13: var(--xkp1ab3q);
}
._1blv4tbd {
  --_1feexz10: var(--xkp1ab3w);
  --_1feexz11: var(--xkp1ab3x);
  --_1feexz12: var(--xkp1ab3z);
  --_1feexz13: var(--xkp1ab40);
}
._1blv4tbg {
  font-size: var(--xkp1ab32);
  line-height: var(--xkp1ab33);
}
._1blv4tbh {
  font-size: var(--xkp1ab3c);
  line-height: var(--xkp1ab3d);
}
._1blv4tbi {
  font-size: var(--xkp1ab3m);
  line-height: var(--xkp1ab3n);
}
._1blv4tbj {
  font-size: var(--xkp1ab3w);
  line-height: var(--xkp1ab3x);
}
._1blv4tbk {
  font-weight: var(--xkp1ab5d);
}
._1blv4tbl {
  font-weight: var(--xkp1ab5e);
}
._1blv4tbm {
  --_1feexz10: var(--xkp1ab49);
  --_1feexz11: var(--xkp1ab4a);
  --_1feexz12: var(--xkp1ab4c);
  --_1feexz13: var(--xkp1ab4d);
}
._1blv4tbp {
  --_1feexz10: var(--xkp1ab4j);
  --_1feexz11: var(--xkp1ab4k);
  --_1feexz12: var(--xkp1ab4m);
  --_1feexz13: var(--xkp1ab4n);
}
._1blv4tbs {
  --_1feexz10: var(--xkp1ab4t);
  --_1feexz11: var(--xkp1ab4u);
  --_1feexz12: var(--xkp1ab4w);
  --_1feexz13: var(--xkp1ab4x);
}
._1blv4tbv {
  --_1feexz10: var(--xkp1ab53);
  --_1feexz11: var(--xkp1ab54);
  --_1feexz12: var(--xkp1ab56);
  --_1feexz13: var(--xkp1ab57);
}
html:not(._1rqfhhdz) ._1blv4tb18 {
  --_1blv4tby: var(--xkp1ab19);
  --_1blv4tbz: var(--xkp1ab17);
  --_1blv4tb10: var(--xkp1ab1d);
  --_1blv4tb11: var(--xkp1ab1o);
  --_1blv4tb12: var(--xkp1ab1m);
  --_1blv4tb13: var(--xkp1ab15);
  --_1blv4tb14: var(--xkp1ab1b);
  --_1blv4tb15: var(--xkp1ab1k);
  --_1blv4tb16: var(--xkp1ab1r);
  --_1blv4tb17: var(--xkp1ab1f);
}
html:not(._1rqfhhdz) ._1blv4tb19 {
  --_1blv4tby: var(--xkp1ab1a);
  --_1blv4tbz: var(--xkp1ab18);
  --_1blv4tb10: var(--xkp1ab1e);
  --_1blv4tb11: var(--xkp1ab1p);
  --_1blv4tb12: var(--xkp1ab1n);
  --_1blv4tb13: var(--xkp1ab16);
  --_1blv4tb14: var(--xkp1ab1c);
  --_1blv4tb15: var(--xkp1ab1l);
  --_1blv4tb16: var(--xkp1ab1s);
  --_1blv4tb17: var(--xkp1ab1h);
}
html._1rqfhhdz ._1blv4tb1a {
  --_1blv4tby: var(--xkp1ab19);
  --_1blv4tbz: var(--xkp1ab17);
  --_1blv4tb10: var(--xkp1ab1d);
  --_1blv4tb11: var(--xkp1ab1o);
  --_1blv4tb12: var(--xkp1ab1m);
  --_1blv4tb13: var(--xkp1ab15);
  --_1blv4tb14: var(--xkp1ab1b);
  --_1blv4tb15: var(--xkp1ab1k);
  --_1blv4tb16: var(--xkp1ab1r);
  --_1blv4tb17: var(--xkp1ab1f);
}
html._1rqfhhdz ._1blv4tb1b {
  --_1blv4tby: var(--xkp1ab1a);
  --_1blv4tbz: var(--xkp1ab18);
  --_1blv4tb10: var(--xkp1ab1e);
  --_1blv4tb11: var(--xkp1ab1p);
  --_1blv4tb12: var(--xkp1ab1n);
  --_1blv4tb13: var(--xkp1ab16);
  --_1blv4tb14: var(--xkp1ab1c);
  --_1blv4tb15: var(--xkp1ab1l);
  --_1blv4tb16: var(--xkp1ab1s);
  --_1blv4tb17: var(--xkp1ab1h);
}
html:not(._1rqfhhdz) ._1blv4tb1c,
html:not(._1rqfhhdz) ._1blv4tb1d,
html:not(._1rqfhhdz) ._1blv4tb1e,
html:not(._1rqfhhdz) ._1blv4tb1f {
  --_1blv4tb15: var(--_1blv4tby);
}
html:not(._1rqfhhdz) ._1blv4tb1g,
html:not(._1rqfhhdz) ._1blv4tb1h {
  --_1blv4tb15: var(--_1blv4tbz);
}
html:not(._1rqfhhdz) ._1blv4tb1i {
  --_1blv4tb15: var(--_1blv4tb12);
}
html:not(._1rqfhhdz) ._1blv4tb1j {
  --_1blv4tb15: var(--_1blv4tb10);
}
html:not(._1rqfhhdz) ._1blv4tb1k {
  --_1blv4tb15: var(--_1blv4tb11);
}
html._1rqfhhdz ._1blv4tb1l,
html._1rqfhhdz ._1blv4tb1m,
html._1rqfhhdz ._1blv4tb1n,
html._1rqfhhdz ._1blv4tb1o {
  --_1blv4tb15: var(--_1blv4tby);
}
html._1rqfhhdz ._1blv4tb1p,
html._1rqfhhdz ._1blv4tb1q {
  --_1blv4tb15: var(--_1blv4tbz);
}
html._1rqfhhdz ._1blv4tb1r {
  --_1blv4tb15: var(--_1blv4tb12);
}
html._1rqfhhdz ._1blv4tb1s {
  --_1blv4tb15: var(--_1blv4tb10);
}
html._1rqfhhdz ._1blv4tb1t {
  --_1blv4tb15: var(--_1blv4tb11);
}
._1blv4tb1u {
  color: var(--_1blv4tby);
}
._1blv4tb1v {
  color: var(--_1blv4tbz);
}
._1blv4tb1w {
  color: var(--_1blv4tb10);
}
._1blv4tb1x {
  color: var(--_1blv4tb11);
}
._1blv4tb1y {
  color: var(--_1blv4tb12);
}
._1blv4tb1z {
  color: var(--_1blv4tb13);
}
._1blv4tb20 {
  color: var(--_1blv4tb14);
}
._1blv4tb21 {
  color: var(--_1blv4tb15);
}
._1blv4tb22 {
  color: var(--_1blv4tb16);
}
._1blv4tb23 {
  color: var(--_1blv4tb17);
}
._1blv4tb24 {
  padding-bottom: calc((var(--xkp1ab9) - var(--xkp1ab33)) / 2);
  padding-top: calc((var(--xkp1ab9) - var(--xkp1ab33)) / 2);
}
._1blv4tb25 {
  padding-bottom: calc((var(--xkp1ab9) - var(--xkp1ab3d)) / 2);
  padding-top: calc((var(--xkp1ab9) - var(--xkp1ab3d)) / 2);
}
._1blv4tb26 {
  padding-bottom: calc((var(--xkp1ab9) - var(--xkp1ab3n)) / 2);
  padding-top: calc((var(--xkp1ab9) - var(--xkp1ab3n)) / 2);
}
._1blv4tb27 {
  padding-bottom: calc((var(--xkp1ab9) - var(--xkp1ab3x)) / 2);
  padding-top: calc((var(--xkp1ab9) - var(--xkp1ab3x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1blv4tb4 {
    --_1feexz10: var(--xkp1ab37);
    --_1feexz11: var(--xkp1ab38);
    --_1feexz12: var(--xkp1ab3a);
    --_1feexz13: var(--xkp1ab3b);
  }
  ._1blv4tb7 {
    --_1feexz10: var(--xkp1ab3h);
    --_1feexz11: var(--xkp1ab3i);
    --_1feexz12: var(--xkp1ab3k);
    --_1feexz13: var(--xkp1ab3l);
  }
  ._1blv4tba {
    --_1feexz10: var(--xkp1ab3r);
    --_1feexz11: var(--xkp1ab3s);
    --_1feexz12: var(--xkp1ab3u);
    --_1feexz13: var(--xkp1ab3v);
  }
  ._1blv4tbd {
    --_1feexz10: var(--xkp1ab41);
    --_1feexz11: var(--xkp1ab42);
    --_1feexz12: var(--xkp1ab44);
    --_1feexz13: var(--xkp1ab45);
  }
  ._1blv4tbg {
    font-size: var(--xkp1ab37);
    line-height: var(--xkp1ab38);
  }
  ._1blv4tbh {
    font-size: var(--xkp1ab3h);
    line-height: var(--xkp1ab3i);
  }
  ._1blv4tbi {
    font-size: var(--xkp1ab3r);
    line-height: var(--xkp1ab3s);
  }
  ._1blv4tbj {
    font-size: var(--xkp1ab41);
    line-height: var(--xkp1ab42);
  }
  ._1blv4tbm {
    --_1feexz10: var(--xkp1ab4e);
    --_1feexz11: var(--xkp1ab4f);
    --_1feexz12: var(--xkp1ab4h);
    --_1feexz13: var(--xkp1ab4i);
  }
  ._1blv4tbp {
    --_1feexz10: var(--xkp1ab4o);
    --_1feexz11: var(--xkp1ab4p);
    --_1feexz12: var(--xkp1ab4r);
    --_1feexz13: var(--xkp1ab4s);
  }
  ._1blv4tbs {
    --_1feexz10: var(--xkp1ab4y);
    --_1feexz11: var(--xkp1ab4z);
    --_1feexz12: var(--xkp1ab51);
    --_1feexz13: var(--xkp1ab52);
  }
  ._1blv4tbv {
    --_1feexz10: var(--xkp1ab58);
    --_1feexz11: var(--xkp1ab59);
    --_1feexz12: var(--xkp1ab5b);
    --_1feexz13: var(--xkp1ab5c);
  }
  ._1blv4tb24 {
    padding-bottom: calc((var(--xkp1ab9) - var(--xkp1ab38)) / 2);
    padding-top: calc((var(--xkp1ab9) - var(--xkp1ab38)) / 2);
  }
  ._1blv4tb25 {
    padding-bottom: calc((var(--xkp1ab9) - var(--xkp1ab3i)) / 2);
    padding-top: calc((var(--xkp1ab9) - var(--xkp1ab3i)) / 2);
  }
  ._1blv4tb26 {
    padding-bottom: calc((var(--xkp1ab9) - var(--xkp1ab3s)) / 2);
    padding-top: calc((var(--xkp1ab9) - var(--xkp1ab3s)) / 2);
  }
  ._1blv4tb27 {
    padding-bottom: calc((var(--xkp1ab9) - var(--xkp1ab42)) / 2);
    padding-top: calc((var(--xkp1ab9) - var(--xkp1ab42)) / 2);
  }
}
._1dxjjv60 {
  --xkp1ab0: 24px;
  --xkp1ab1: 4px;
  --xkp1ab2: 8px;
  --xkp1ab3: 12px;
  --xkp1ab4: 20px;
  --xkp1ab5: 32px;
  --xkp1ab6: 48px;
  --xkp1ab7: 96px;
  --xkp1ab8: 120px;
  --xkp1ab9: 44px;
  --xkp1aba: 4px;
  --xkp1abb: 2px;
  --xkp1abc: 4px;
  --xkp1abd: 6px;
  --xkp1abe: 10px;
  --xkp1abf: #e60278;
  --xkp1abg: #f8b1dc;
  --xkp1abh: #fdc221;
  --xkp1abi: #fee384;
  --xkp1abj: #b91e1e;
  --xkp1abk: #fb999a;
  --xkp1abl: #838fa5;
  --xkp1abm: rgba(159, 176, 245, 0.7);
  --xkp1abn: #4964e9;
  --xkp1abo: #9fb0f5;
  --xkp1abp: #1d559d;
  --xkp1abq: #98c9f1;
  --xkp1abr: #2e3849;
  --xkp1abt: #d2d7df;
  --xkp1abs: #fff;
  --xkp1abu: #12784f;
  --xkp1abv: #8bdec5;
  --xkp1abw: #512eaa;
  --xkp1abx: #c6acf5;
  --xkp1aby: 1px;
  --xkp1abz: 2px;
  --xkp1ab10: 3px;
  --xkp1ab11: 400px;
  --xkp1ab12: 660px;
  --xkp1ab13: 940px;
  --xkp1ab14: 1280px;
  --xkp1ab15: #e60278;
  --xkp1ab16: #f8b1dc;
  --xkp1ab17: #723d02;
  --xkp1ab18: #fee384;
  --xkp1ab19: #b91e1e;
  --xkp1ab1a: #fb999a;
  --xkp1ab1b: #4964e9;
  --xkp1ab1c: #9fb0f5;
  --xkp1ab1d: #1d559d;
  --xkp1ab1e: #98c9f1;
  --xkp1ab1f: #4964e9;
  --xkp1ab1h: #9fb0f5;
  --xkp1ab1g: #4964e9;
  --xkp1ab1i: #512eaa;
  --xkp1ab1j: #c6acf5;
  --xkp1ab1k: #2e3849;
  --xkp1ab1l: #fff;
  --xkp1ab1m: #12784f;
  --xkp1ab1n: #8bdec5;
  --xkp1ab1o: #512eaa;
  --xkp1ab1p: #c6acf5;
  --xkp1ab1q: #f57c00;
  --xkp1ab1r: #5a6881;
  --xkp1ab1s: hsla(0, 0%, 100%, 0.65);
  --xkp1ab1t: #f7f8fb;
  --xkp1ab1u: #0e131b;
  --xkp1ab1v: #0d3880;
  --xkp1ab1w: #e60278;
  --xkp1ab1x: #cd026b;
  --xkp1ab1y: #fd0585;
  --xkp1ab1z: #feeffa;
  --xkp1ab20: #fdd7f3;
  --xkp1ab21: #fde3f6;
  --xkp1ab22: #fdc221;
  --xkp1ab23: #fef8de;
  --xkp1ab24: #b91e1e;
  --xkp1ab25: #a31a1a;
  --xkp1ab26: #db1616;
  --xkp1ab27: #ffe3e2;
  --xkp1ab28: #fef3f3;
  --xkp1ab29: #fcdbdb;
  --xkp1ab2a: #fde7e7;
  --xkp1ab2b: #4964e9;
  --xkp1ab2c: #3251e6;
  --xkp1ab2d: #5975ff;
  --xkp1ab2e: #f4f6fe;
  --xkp1ab2f: #dde3fc;
  --xkp1ab2g: #e8ecfd;
  --xkp1ab2h: #1d559d;
  --xkp1ab2i: #e3f2fb;
  --xkp1ab2j: #2e3849;
  --xkp1ab2k: #242c39;
  --xkp1ab2l: #384459;
  --xkp1ab2m: #eaecf1;
  --xkp1ab2n: #f7f8fb;
  --xkp1ab2o: #e6e9f3;
  --xkp1ab2p: #eff1f7;
  --xkp1ab2q: #12784f;
  --xkp1ab2r: #e2f7f1;
  --xkp1ab2s: #512eaa;
  --xkp1ab2t: #f1e8fd;
  --xkp1ab2u: #fff;
  --xkp1ab2v: #1c2330;
  --xkp1ab2w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --xkp1ab2x: 1456;
  --xkp1ab2y: 1900;
  --xkp1ab2z: -500;
  --xkp1ab30: 0;
  --xkp1ab31: 2048;
  --xkp1ab32: 12px;
  --xkp1ab33: 20px;
  --xkp1ab34: 8.5313px;
  --xkp1ab35: -0.4642em;
  --xkp1ab36: -0.4915em;
  --xkp1ab37: 12px;
  --xkp1ab38: 20px;
  --xkp1ab39: 8.5313px;
  --xkp1ab3a: -0.4642em;
  --xkp1ab3b: -0.4915em;
  --xkp1ab3c: 14px;
  --xkp1ab3d: 20px;
  --xkp1ab3e: 9.9531px;
  --xkp1ab3f: -0.3451em;
  --xkp1ab3g: -0.3725em;
  --xkp1ab3h: 14px;
  --xkp1ab3i: 20px;
  --xkp1ab3j: 9.9531px;
  --xkp1ab3k: -0.3451em;
  --xkp1ab3l: -0.3725em;
  --xkp1ab3m: 16px;
  --xkp1ab3n: 24px;
  --xkp1ab3o: 11.375px;
  --xkp1ab3p: -0.3809em;
  --xkp1ab3q: -0.4082em;
  --xkp1ab3r: 16px;
  --xkp1ab3s: 24px;
  --xkp1ab3t: 11.375px;
  --xkp1ab3u: -0.3809em;
  --xkp1ab3v: -0.4082em;
  --xkp1ab3w: 18px;
  --xkp1ab3x: 28px;
  --xkp1ab3y: 12.7969px;
  --xkp1ab3z: -0.4086em;
  --xkp1ab40: -0.436em;
  --xkp1ab41: 18px;
  --xkp1ab42: 28px;
  --xkp1ab43: 12.7969px;
  --xkp1ab44: -0.4086em;
  --xkp1ab45: -0.436em;
  --xkp1ab46: 400;
  --xkp1ab47: 600;
  --xkp1ab48: 700;
  --xkp1ab49: 28px;
  --xkp1ab4a: 36px;
  --xkp1ab4b: 19.9063px;
  --xkp1ab4c: -0.2737em;
  --xkp1ab4d: -0.3011em;
  --xkp1ab4e: 42px;
  --xkp1ab4f: 44px;
  --xkp1ab4g: 29.8594px;
  --xkp1ab4h: -0.1547em;
  --xkp1ab4i: -0.182em;
  --xkp1ab4j: 21px;
  --xkp1ab4k: 32px;
  --xkp1ab4l: 14.9297px;
  --xkp1ab4m: -0.3928em;
  --xkp1ab4n: -0.4201em;
  --xkp1ab4o: 28px;
  --xkp1ab4p: 36px;
  --xkp1ab4q: 19.9063px;
  --xkp1ab4r: -0.2737em;
  --xkp1ab4s: -0.3011em;
  --xkp1ab4t: 21px;
  --xkp1ab4u: 28px;
  --xkp1ab4v: 14.9297px;
  --xkp1ab4w: -0.2975em;
  --xkp1ab4x: -0.3249em;
  --xkp1ab4y: 21px;
  --xkp1ab4z: 28px;
  --xkp1ab50: 14.9297px;
  --xkp1ab51: -0.2975em;
  --xkp1ab52: -0.3249em;
  --xkp1ab53: 18px;
  --xkp1ab54: 28px;
  --xkp1ab55: 12.7969px;
  --xkp1ab56: -0.4086em;
  --xkp1ab57: -0.436em;
  --xkp1ab58: 18px;
  --xkp1ab59: 28px;
  --xkp1ab5a: 12.7969px;
  --xkp1ab5b: -0.4086em;
  --xkp1ab5c: -0.436em;
  --xkp1ab5d: 400;
  --xkp1ab5e: 600;
  --xkp1ab5f: none;
  --xkp1ab5g: 24px;
  --xkp1ab5h: 20px;
  --xkp1ab5i: transform 0.125s ease, opacity 0.125s ease;
  --xkp1ab5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --xkp1ab5k: scale(0.95);
  --xkp1ab5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --xkp1ab5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --xkp1ab5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._1p29okh6 {
  background: var(--_1p29okh0);
}
._1p29okh7 {
  background: var(--_1p29okh1);
}
._1p29okh8 {
  background: var(--_1p29okh2);
}
._1p29okh9 {
  background: var(--_1p29okh3);
}
._1p29okha {
  background: var(--_1p29okh4);
}
._1p29okhb {
  background: var(--_1p29okh5);
}
html:not(._1rqfhhdz) ._1p29okhc {
  --_1p29okh0: var(--xkp1abw);
  --_1p29okh1: var(--xkp1abp);
  --_1p29okh2: var(--xkp1abu);
  --_1p29okh3: var(--xkp1abh);
  --_1p29okh4: var(--xkp1abj);
  --_1p29okh5: var(--xkp1abn);
}
html:not(._1rqfhhdz) ._1p29okhd {
  --_1p29okh0: var(--xkp1abx);
  --_1p29okh1: var(--xkp1abq);
  --_1p29okh2: var(--xkp1abv);
  --_1p29okh3: var(--xkp1abi);
  --_1p29okh4: var(--xkp1abk);
  --_1p29okh5: var(--xkp1abo);
}
html._1rqfhhdz ._1p29okhe {
  --_1p29okh0: var(--xkp1abw);
  --_1p29okh1: var(--xkp1abp);
  --_1p29okh2: var(--xkp1abu);
  --_1p29okh3: var(--xkp1abh);
  --_1p29okh4: var(--xkp1abj);
  --_1p29okh5: var(--xkp1abn);
}
html._1rqfhhdz ._1p29okhf {
  --_1p29okh0: var(--xkp1abx);
  --_1p29okh1: var(--xkp1abq);
  --_1p29okh2: var(--xkp1abv);
  --_1p29okh3: var(--xkp1abi);
  --_1p29okh4: var(--xkp1abk);
  --_1p29okh5: var(--xkp1abo);
}
._1p29okhg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1p29okhh {
  width: var(--xkp1abe);
}
._1p29okhi {
  width: var(--xkp1aba);
}
.x61xjw0 {
  margin-bottom: -0.1em;
}
.x61xjw2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
.x61xjw0 .x61xjw2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .x61xjw4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--x61xjw3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__1rqfhhdz,html.sprinkles_darkMode__1rqfhhdz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__1dxjjv60 typography_lightModeTone_light__1blv4tb18 typography_darkModeTone_dark__1blv4tb1b">
+        <div class="reset_base__1n3d6q80 sprinkles_paddingBottom_gutter_mobile__1rqfhhd7i sprinkles_paddingTop_gutter_mobile__1rqfhhd6e sprinkles_paddingLeft_gutter_mobile__1rqfhhd9q sprinkles_paddingRight_gutter_mobile__1rqfhhd8m sprinkles_position_relative_mobile__1rqfhhd5e typography_lightModeTone_light__1blv4tb18 typography_darkModeTone_dark__1blv4tb1b sprinkles_background_surface_lightMode__1rqfhhd32 sprinkles_background_surfaceDark_darkMode__1rqfhhd35">
+          <span class="reset_base__1n3d6q80 sprinkles_display_block_mobile__1rqfhhd4y typography_fontFamily__1blv4tb0 typography_fontWeight_regular__1blv4tb1 typography_tone_neutral__1blv4tb21 capsize_capsizeStyle__1feexz14 typography_textSize_large__1blv4tbd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
